--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
         <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
         <link type="text/css" rel="stylesheet" href="/css/app.css">
+        <title>doge tweets</title>
     </head>
     <body>
         <div id="tweets-container" ng-controller="TweetController">
