--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
         <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
-        <link type="text/css" rel="stylesheet" href="/css/app.css">
         <title>doge tweets</title>
     </head>
     <body>
@@ -29,9 +28,6 @@
             </div>
         </div>
         <!-- scripts -->
-        <script src="/bower/angular/angular.min.js"></script>
-        <script src="/bower/angular-animate/angular-animate.min.js"></script>
-        <script src="/bower/angular-resource/angular-resource.min.js"></script>
-        <script src="/js/doge.js"></script>
+        <script src="/bundle.js"></script>
     </body>
 </html>
